; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/egl/extr_egl_client_surface.c_egl_surface_set_attrib.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/egl/extr_egl_client_surface.c_egl_surface_set_attrib.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

@PBUFFER = common dso_local global i32 0, align 4
@eglIntSelectMipmap_impl = common dso_local global i32 0, align 4
@EGLINTSELECTMIPMAP_ID = common dso_local global i32 0, align 4
@EGL_SUCCESS = common dso_local global i32 0, align 4
@EGL_BAD_PARAMETER = common dso_local global i32 0, align 4
@EGL_BAD_ATTRIBUTE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @egl_surface_set_attrib(%struct.TYPE_3__* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %9 = call i32* (...) @CLIENT_GET_THREAD_STATE()
  store i32* %9, i32** %8, align 8
  %10 = load i32, i32* %6, align 4
  switch i32 %10, label %51 [
    i32 132, label %11
    i32 128, label %33
    i32 131, label %42
  ]

11:                                               ; preds = %3
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 4
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @PBUFFER, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %31

17:                                               ; preds = %11
  %18 = load i32, i32* @eglIntSelectMipmap_impl, align 4
  %19 = load i32*, i32** %8, align 8
  %20 = load i32, i32* @EGLINTSELECTMIPMAP_ID, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 3
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @RPC_UINT(i32 %23)
  %25 = load i32, i32* %7, align 4
  %26 = call i32 @RPC_INT(i32 %25)
  %27 = call i32 @RPC_CALL2(i32 %18, i32* %19, i32 %20, i32 %24, i32 %26)
  %28 = load i32, i32* %7, align 4
  %29 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  br label %31

31:                                               ; preds = %17, %11
  %32 = load i32, i32* @EGL_SUCCESS, align 4
  store i32 %32, i32* %4, align 4
  br label %53

33:                                               ; preds = %3
  %34 = load i32, i32* %7, align 4
  switch i32 %34, label %40 [
    i32 133, label %35
    i32 134, label %35
  ]

35:                                               ; preds = %33, %33
  %36 = load i32, i32* %7, align 4
  %37 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %37, i32 0, i32 1
  store i32 %36, i32* %38, align 4
  %39 = load i32, i32* @EGL_SUCCESS, align 4
  store i32 %39, i32* %4, align 4
  br label %53

40:                                               ; preds = %33
  %41 = load i32, i32* @EGL_BAD_PARAMETER, align 4
  store i32 %41, i32* %4, align 4
  br label %53

42:                                               ; preds = %3
  %43 = load i32, i32* %7, align 4
  switch i32 %43, label %49 [
    i32 129, label %44
    i32 130, label %44
  ]

44:                                               ; preds = %42, %42
  %45 = load i32, i32* %7, align 4
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 2
  store i32 %45, i32* %47, align 4
  %48 = load i32, i32* @EGL_SUCCESS, align 4
  store i32 %48, i32* %4, align 4
  br label %53

49:                                               ; preds = %42
  %50 = load i32, i32* @EGL_BAD_PARAMETER, align 4
  store i32 %50, i32* %4, align 4
  br label %53

51:                                               ; preds = %3
  %52 = load i32, i32* @EGL_BAD_ATTRIBUTE, align 4
  store i32 %52, i32* %4, align 4
  br label %53

53:                                               ; preds = %51, %49, %44, %40, %35, %31
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local i32* @CLIENT_GET_THREAD_STATE(...) #1

declare dso_local i32 @RPC_CALL2(i32, i32*, i32, i32, i32) #1

declare dso_local i32 @RPC_UINT(i32) #1

declare dso_local i32 @RPC_INT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
